Implement secure cookie sessions and Tailwind migration